# isbnviz

./: README.md
data/: .gitignore
exploration/: isbn_countries.py  pyproject.toml
exploration/notebooks/: exploration.ipynb
generation/: README.md  countries.ipynb  data_exporter.py  exploration.ipynb  exploration2.ipynb  geo.json  hello.py  isbngrp.ipynb  pyproject.toml  tilemaker.py  vips-properties.xml  vips.ipynb
generation/exploration/: exploration.ipynb
kotlinpower/: build.gradle.kts  settings.gradle.kts
kotlinpower/gradle/wrapper/: gradle-wrapper.properties
kotlinpower/src/main/kotlin/: Hilbert.kt  ISBNCountries.kt  Imagen.kt  Main.kt  Polygon.kt  Publishers.kt  RegionFinder.kt
visualization/: index.html  package-lock.json  package.json
visualization/public/: 2.json  _headers  countries.json  eco.pmtiles  geo.json  out.mbtiles  out.pmtiles  x_headers
visualization/public/geojson/: 2.json
visualization/public/zoomify/: vips-properties.xml
visualization/public/zoomify/duxiu_ssid.bin.png/: ImageProperties.xml
visualization/public/zoomify/image/: ImageProperties.xml
visualization/public/zoomify/oclc.bin.png/: ImageProperties.xml
visualization/src/: main.js  maindzi.js  mainzoomify.js  util.js
