[project]
name = "generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bencode-py>=4.0.0",
    "isbnlib>=3.10.14",
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "numpy>=2.2.2",
    "numpy-hilbert-curve>=1.0.1",
    "opencv-python>=4.11.0.86",
    "orjson>=3.10.15",
    "pillow>=11.1.0",
    "pyvips[binary]>=2.2.3",
    "scipy>=1.15.1",
    "shapely>=2.0.6",
    "tqdm>=4.67.1",
    "zstandard>=0.23.0",
]
